# ClickbaitDetector

./: .dockerignore  .gitignore  config.json  pyproject.toml  requirements.txt  train.py
clickbait_detector/datasets/: ClickbaitDataset.py
clickbait_detector/models/: model.py
env/: Dockerfile
k8s/: training-job-node1.yml  training-job-node2.yml  training-job.yml
kedro/clickbait-detector-kedro/: README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
kedro/clickbait-detector-kedro/conf/base/catalog/: 01_input.yml  02_intermediate.yml
kedro/clickbait-detector-kedro/conf/base/parameters/: data_cleansing.yml
kedro/clickbait-detector-kedro/docs/source/: conf.py  index.rst
kedro/clickbait-detector-kedro/src/clickbait_detector_kedro/: __init__.py  __main__.py  settings.py
kedro/clickbait-detector-kedro/src/clickbait_detector_kedro/pipelines/data_cleansing/: __init__.py  nodes.py  pipeline.py
kedro/clickbait-detector-kedro/src/clickbait_detector_kedro/pipelines/data_loading/: __init__.py  pipeline.py
kedro/clickbait-detector-kedro/tests/: test_run.py
kedro/clickbait-detector-kedro/tests/pipelines/data_cleansing/: test_pipeline.py
kedro/clickbait-detector-kedro/tests/pipelines/data_loading/: test_pipeline.py
training/: Trainer.py  train.py
